[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freya-observability"
version = "0.1.0"
description = "Shared observability primitives for Freya clusters: structured logging, distributed tracing, circuit breakers, retries, timeouts, and healthchecks."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "tenacity>=8.2.0",
    "fastapi>=0.115.0",
    "prometheus-client>=0.20.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
amqp = ["aio-pika>=9.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "aio-pika>=9.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["freya_observability*"]
